# plox

./: .gitignore  README.md  pyproject.toml
abstract_syntax_tree/: __init__.py  expressions.py  printer.py  statements.py
app/: main.py
docs/: lox.grammar.ebnf
environment/: environment.py
errors/: __init__.py  error_handler.py  errors.py
interpreter/: __init__.py  interpreter.py
lox_builtins/: __init__.py  functions.py
parser/: parser.py
plox/: main.py
resolver/: resolver.py
scanner/: scanner.py  token.py
