[tool.poetry]
name = "plox"
version = "0.1.0"
description = "A lox interpreter implemented in python"
authors = ["Æ Griffiths <164574794+damwaingames@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
plox = "plox.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = { extras = ["all"], version = "^0.12.3" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
